[package]
name = "disk-usage-again"
version = "0.0.6"
authors = ["Wong Shek Hei Felix <shekhei@gmail.com>"]
edition = "2018"

[[bin]]
name = "dua"
test = false
bench = false
doctest = false
path = "src/main.rs"

[lib]
test = true
name = "dualib"
path = "src/lib.rs"

[[test]]
name = "tests"

[dependencies]
rayon = "1.0.3"
clap = "2.32.0"
log = "0.4.6"
nom = "^4.1"
num_cpus = "1.9.0"

[profile.release]
lto = true
